--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Hello Everyone, I'm Paula</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I'm so tired.</p>
+<p>SOS</p>
 </body>
 </html>
