--- a/index.html
+++ b/index.html
@@ -5,4 +5,8 @@
 <p>I'm so tired.</p>
 <p>SOS</p>
 </body>
+<ul>Things to do today</ul>
+<li>Create an account in GitHub</li>
+<li>Download Visual Studio Code</li>
+<li>Sleep</li>
 </html>
