--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <body>
 <h1>Paula Pérez Rodríguez</h1>
 <h2>Produdct Designer | UX/UI</h2>
+<h3>Home</h3>
 <h3>Portfolio</h3>
-<p>hola</p>
+<h3>About me</h3>
+<h3>Contact</h3>
+<p></p>
 </body>
 <ul>Things to do today</ul>
 <li>Create an account in GitHub</li>
