--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 <body>
 <h1>Paula Pérez Rodríguez</h1>
-<h2>Produdct Designer | UX/UI</h2>
-<h3>Home</h3>
-<h3>Portfolio</h3>
-<h3>About me</h3>
+    <h2>Produdct Designer | UX/UI</h2>
+        <h3>Home</h3>
+        <h3>Portfolio</h3>
+        <p>My everyday work is present here</p>
+            <li>UX/UI</li>
+            <li>Product</li>
+         <h3>About me</h3>
+            <li>Education</li>
+            <li>Experience</li>
+<li>Skills</li>
 <h3>Contact</h3>
 <p></p>
 </body>
-<ul>Things to do today</ul>
-<li>Create an account in GitHub</li>
-<li>Download Visual Studio Code</li>
-<li>Sleep</li>
 </html>
