--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Paula Pérez Rodríguez</h1>
-    <h2>Produdct Designer | UX/UI</h2>
-        <h3>Home</h3>
-        <h3>Portfolio</h3>
-        <p>My everyday work is present here</p>
-            <li>UX/UI</li>
-            <li>Product</li>
-         <h3>About me</h3>
-            <li>Education</li>
-            <li>Experience</li>
-<li>Skills</li>
-<h3>Contact</h3>
-<p></p>
-</body>
+    <nav class="menu">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a hred="#">Work</a></li>
+            <li><a href="#">About me</a></li>
+        </ul>
+    <head>
+        <title>Portfolio</title>
+        <h1 align="left">Paula Pérez Rodríguez</h1>
+        <h2 align="left">Product Designer | UX/UI</h2>
+<section>
+    <h1 align="left">Home</h1>
+
 </html>
