--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <nav class="menu">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a hred="#">Work</a></li>
-            <li><a href="#">About me</a></li>
-        </ul>
     <head>
         <title>Portfolio</title>
         <h1 align="left">Paula Pérez Rodríguez</h1>
         <h2 align="left">Product Designer | UX/UI</h2>
+    </head>
+    <nav class="menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">About me</a></li>
+                </ul>
 <section>
     <h1 align="left">Home</h1>
 
