--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
         <h1 align="left">Paula Pérez Rodríguez</h1>
         <h2 align="left">Product Designer | UX/UI</h2>
     </head>
+    
     <nav class="menu">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Work</a></li>
-                    <li><a href="#">About me</a></li>
-                </ul>
-<section>
-    <h1 align="left">Home</h1>
-
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">About me</a></li>
+        </ul>
+    </nav>
+    
+    <section>
+        <h1 align="left">Home</h1>
+    </section>
+    <section>
+        <h1 align="left"> Work</h1>
+        <p align="left"> My everyday work is present here.</p>
+        <img src="images/wein_responsive.jpg"/>
+    </section>
 </html>
